--- a/experiments.tex
+++ b/experiments.tex
@@ -1,5 +1,5 @@
 \chapter{Experiments}
-\label{c:experiments}
+\label{chapter:experiments}
 
 We use 25 benchmark problems from the CEC 2005 Special Session on Real-Parameter Optimization to test the performance of our new techniques.
 The CEC 2005 benchmark problems are composed of both standard test problems e.g. Sphere, Schwefel's, Rosenbrock's, Rastrigin's, etc.,
@@ -64,3 +64,52 @@ Archive size                     & $k$      & $50$           \\ \hline
 %Describe our bandit parameters setting, including the initial population, maximum number of arms, and (1+1)-ES step size.
 
 \section{Experiment Results}
+
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{Average_F1_F8}
+\caption{Average error of Problem 1 to Problem 8.}\label{fig:Average_F1_F8}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{Average_F9_F16}
+\caption{Average error of Problem 9 to Problem 16.}\label{fig:Average_F9_F16}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{Average_F17_F24}
+\caption{Average error of Problem 17 to Problem 24.}\label{fig:Average_F17_F24}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{Average_F25}
+\caption{Average error of Problem 25.}\label{fig:Average_F25}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{Median_F1_F8}
+\caption{Median error of Problem 1 to Problem 8.}\label{fig:Median_F1_F8}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{Median_F9_F16}
+\caption{Median error of Problem 9 to Problem 16.}\label{fig:Median_F9_F16}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{Median_F17_F24}
+\caption{Median error of Problem 17 to Problem 24.}\label{fig:Median_F17_F24}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{Median_F25}
+\caption{Median error of Problem 25.}\label{fig:Median_F25}
+\end{figure}
+
