--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,30 +1,45 @@
 \chapter{Conclusion}
 \label{chapter:conclusion}
 
+In this thesis, we proposed a new multimodal optimization technique that aims to break down the multimodal problem into unimodal problems.
+This technique is composed of three main components: unimodal detection, region of interest optimization and resource allocation.
+We use the three techniques to dynamically isolate potential unimodals and enlarge a specific interesting region on the subspace for algorithms to search more thoroughly.
+We also manage the ratio between exploration and exploitation according to the remaining resources,
+so that the optimization process can be more efficient.
 
-%\section{Test Problems} 
-Contribution:
+First, we proposed a unimodal detection technique to find potential \textit{fitness hills} in a real-valued multimodal problem 
+by hierarchical clustering and Minimum Descriptioni Length.
+It depicts the underlying \textit{fitness hills} better than K-Means.
+Also unlike K-Means which needs to collaborate with other methods to determine the number of clusters,
+our technique intrinsically detects the number of potential unimodals.
 
-find potential \textit{fitness hills} in a real-valued multimodal problem by hierarchical clustering and Minimum Descriptioni Length.
-Unlike K-Means clustering that only considers spatial density and requires user-defined number of clusters, or other techniques to help determine the number of clusters, 
-the hierarchical clustering process intrinsically captures the unimodal by considering the fitness values.
-Later, combining with the MDL, our clustering technique can automatically detect potential unimodals.
+Second, we also proposed a method to seperate the search space into smaller subspaces in order to enhance performance.
+We use linear projection matrix to project the search space to a subspace with well-defined boundaries for feasible solutions.
+Therefore, the algorithm only needs to search within a hypercube, constrined by $[0,1]$ in all dimensions.
+This technique is perferable for algorithms that requires a box-shape boundaries.
+It also creates ROIs on the original search space that isolates the unimodals.
+We also use the (1+1)-ES to optimize the projection matrix so that the ROIs have minimal-overlapping, thus enhance the searching efficiency.
+By cracking down the original search space into multiple non-overlapping subspace, 
+alogrithms now only have to search a smaller portion of the landscape which ideally consists of only one unimodal.
 
-define non-overlapping ROIs with well-defined boundaries that isolates and enhance potential unimodals.
-This allows the alogrithms to search the a smaller portion of the landscape which should only consists of one unimodal in the projected subspace.
-allocate resources
+Furthermore, we proposed a new Multi-armed Bandit techniques that optimize the resource allocation.
+We also explained how to maintain a more stablize cluster shapes during \textit{recluster}, 
+yet still conserve the flexibility to split when needed.
+We believe that in the beginning, when there are abundant of resources left, we should invest more resources in exploration.
+That means we should update each clusters more equally for exploration.
+Later, as the algorithms update the particles, we should be able to merge clusters to eliminate redundant search,
+or split a cluster and invest more particles to search in a certain region.
+When there are few evaluations left, we should concentrate on exploiting the current best hill.
 
-Weakness:
-Potentially more NFE on unimodals and moving regions.
-Sometimes still unstable.
-Requires a better clustering techniques to identify underlying unimodals.
-
-
-Future work:
-A linkage tree attemp to create clusters.
-A better way to delete arms
-Non-linear transformation
-
+However, there are still many issues that can be improved.
+Our experiment results shows that there are still stability issues.
+We need to investigate more on how to delete unnecessary arms.
+Thus, this technique tends to cost more evaluations on problems 
+that need to move for a long distance after converging to a relatively narrow valley.
+Also, the clustering techniques to identify underlying unimodals can be further improved.
+The current hierarchical clustering technique can be extended to a complete tree that contains all clusters.
+Moreover, since this technique is composed of many relatively complex methods, 
+speeding up computational time is also a crutial issue for all hyperparameters tuning techniques.
 
 
 
